Update version to 0.0.3 and enable shell execution in servicely-exec.html

--- a/servicely-exec.html
+++ b/servicely-exec.html
@@ -8,7 +8,7 @@
             commandArgs: {value: ""},
             cwd: {value: ""},
             envProperty: {value: ""},
-            shell: {value: false},
+            shell: {value: true},
             payloadIs: {value: "argument"}, 
             minError: {value: 1, validate: RED.validators.number()},
             minWarning: {value: "", validate: RED.validators.number()},
